<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.yl.teacher.widget.CustomTitleBar
        android:id="@+id/widget_custom_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/navi_user"></com.yl.teacher.widget.CustomTitleBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/relaMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/widget_custom_titlebar"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="140px"
                android:background="@drawable/et_comment_bg">


                <EditText
                    android:id="@+id/etName"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:hint="@string/txt_login_name"
                    android:inputType="phone"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dip"
                    android:singleLine="true"
                    android:textColor="@color/deep_gray"
                    android:textSize="15sp"></EditText>

                <ImageView
                    android:id="@+id/imgLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/etName"
                    android:layout_marginLeft="35px"
                    android:layout_marginRight="35px"
                    android:background="@color/line" />

                <EditText
                    android:id="@+id/etPwd"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/imgLine"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:hint="@string/txt_login_pwd"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dip"
                    android:singleLine="true"
                    android:textColor="@color/deep_gray"
                    android:textSize="15sp"></EditText>

            </com.zhy.autolayout.AutoRelativeLayout>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="80px"
                android:layout_below="@+id/relaMsg"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="50px"
                android:background="@drawable/login_bg"
                android:gravity="center"
                android:text="@string/txt_login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvLogin"
                android:layout_marginLeft="70px"
                android:layout_marginTop="50px"
                android:gravity="center"
                android:text="@string/txt_login_service"
                android:textColor="#24c68a"
                android:textSize="15sp" />


            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/linearHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvLogin"
                android:layout_marginRight="70px"
                android:layout_marginTop="50px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_ask" />

                <TextView
                    android:id="@+id/tvForget"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_login_forget"
                    android:textColor="#b0b0b0"
                    android:textSize="15sp" />

            </com.zhy.autolayout.AutoLinearLayout>


            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="200px"
                android:layout_height="80px"
                android:layout_below="@+id/linearHelp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="50px"
                android:background="@drawable/register_bg"
                android:gravity="center"
                android:text="@string/txt_login_phone"
                android:textColor="#24c68a"
                android:textSize="18sp" />

        </com.zhy.autolayout.AutoRelativeLayout>

    </ScrollView>

</com.zhy.autolayout.AutoLinearLayout>