<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:layout_marginTop="30px"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20px">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_xing" />

                <TextView
                    android:id="@+id/tv_sendbulletin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:text="@string/sendbulletin_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_sendbulletin_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_toRightOf="@+id/tv_class"
                    android:background="@null"
                    android:hint="@string/sendbulletin_title_notic_hint"
                    android:singleLine="true"
                    android:textColor="@color/deep_gray"
                    android:textSize="16sp" />

            </com.zhy.autolayout.AutoLinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/border_gray"></View>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/rl_statrtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:layout_marginTop="30px"
                android:paddingLeft="20px">

                <ImageView
                    android:id="@+id/iv_starttime_xing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_xing"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:layout_toRightOf="@+id/iv_starttime_xing"
                    android:text="@string/sendbulletin_start_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_sendbulletin_starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:textColor="@color/deep_gray"
                    android:layout_toRightOf="@+id/tv_starttime"
                    android:background="@null"
                    android:editable="false"
                    android:hint="@string/sendbulletin_start_time_hint"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="60px"
                    android:src="@drawable/arrow_grey" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/border_gray"></View>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/rl_endtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:layout_marginTop="30px"
                android:paddingLeft="20px">

                <ImageView
                    android:id="@+id/iv_endtime_xing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_xing"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_endtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:layout_toRightOf="@+id/iv_endtime_xing"
                    android:text="@string/sendbulletin_end_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_sendbulletin_endtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:textColor="@color/deep_gray"
                    android:layout_toRightOf="@+id/tv_endtime"
                    android:background="@null"
                    android:editable="false"
                    android:hint="@string/sendbulletin_end_time_hint"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="60px"
                    android:src="@drawable/arrow_grey" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/border_gray"></View>

            <!--<com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40px"
                android:layout_marginTop="40px"
                android:paddingLeft="40px">

                <ImageView
                    android:id="@+id/iv_range_xing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_xing"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:layout_toRightOf="@+id/iv_range_xing"
                    android:text="@string/sendbulletin_range"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_toRightOf="@+id/tv_range"
                    android:background="@null"
                    android:hint="@string/sendbulletin_range_hint"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="60px"
                    android:src="@drawable/arrow_grey" />

            </com.zhy.autolayout.AutoRelativeLayout>-->

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/border_gray"></View>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:layout_marginTop="30px"
                android:paddingLeft="20px">

                <ImageView
                    android:id="@+id/iv_publisher_xing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_xing"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:layout_toRightOf="@+id/iv_publisher_xing"
                    android:text="@string/publisher"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_sendbulletin_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/deep_gray"
                    android:layout_marginLeft="20px"
                    android:layout_toRightOf="@+id/tv_publisher"
                    android:background="@null"
                    android:hint="@string/publisher_hint"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/border_gray"></View>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400px"
                android:layout_marginTop="40px">

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30px"
                    android:layout_marginTop="30px"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20px">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_xing" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10px"
                        android:text="@string/content"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_sendbulletin_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20px"
                        android:background="@null"
                        android:textColor="@color/deep_gray"
                        android:hint="@string/sendbulletin_content_hint"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoRelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <ImageView
                        android:id="@+id/iv_sendbulletin_image"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_marginLeft="240px"
                        android:scaleType="centerCrop"
                        android:src="@drawable/selector_btn_add_pic"></ImageView>

                    <ImageView
                        android:id="@+id/iv_sendbulletin_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/circle_remove"
                        android:visibility="gone" />

                </com.zhy.autolayout.AutoRelativeLayout>

            </com.zhy.autolayout.AutoRelativeLayout>

        </com.zhy.autolayout.AutoLinearLayout>

    </ScrollView>

</com.zhy.autolayout.AutoLinearLayout>